# pairing

./: default.nix  pairing.cabal
app/: Main.hs
src/: Pairing.hs
