name:                pairing
synopsis:            pair on things
description:         pairing is just for fun
version:             0.0.1.0
homepage:            https://github.com/shapr/pairing
license:             BSD3
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Utilities
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type: git
    location: https://github.com/shapr/pairing.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Pairing
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  build-depends:       base >= 4.11 && < 5
                     , bytestring
                     , attoparsec
                     , directory
                     , extra
                     , filepath
                     , unix

executable pairing
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2 -rtsopts "-with-rtsopts=-N -qg"
  build-depends:      base
                    , pairing

test-suite pairing-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , directory
                  , extra
                  , filepath
                  , hedgehog
                  , pairing
                  , temporary
                  , unix
